Update NOAA20 driver script in nucaps_l2.yml
Well.. n20 is apparently still j01

--- a/config/nucaps_l2.yml
+++ b/config/nucaps_l2.yml
@@ -8,7 +8,7 @@ configs:
     save:
     - "*.nc"
   noaa20:
-    driver: 'run_heap.bash -s n20 --noclean -d /cspp/dyno/nucaps_anc -vv  -m HR_IRMW
+    driver: 'run_heap.bash -s j01 --noclean -d /cspp/dyno/nucaps_anc -vv  -m HR_IRMW
       -p 6 '
     save:
     - "*.nc"
