--- a/config/nucaps_l2.yml
+++ b/config/nucaps_l2.yml
@@ -12,6 +12,11 @@ configs:
       -p 6 '
     save:
     - "*.nc"
+  noaa21:
+    driver: 'run_heap.bash -s n21 --noclean -d /cspp/dyno/nucaps_anc -vv  -m HR_IRMW
+      -p 6 '
+    save:
+    - "*.nc"
   metop-b:
     driver: '/cspp/CSPP_HEAP_2_0/scripts/run_heap.bash -s m01 --noclean -d /cspp/dyno/nucaps_anc -vv -p 6 '
     save:
