--- a/config/heap_awips_reformat.yml
+++ b/config/heap_awips_reformat.yml
@@ -4,6 +4,6 @@ configs:
     driver: heap4awips_nc.py
     options: "  "
     to_process_glob:
-    - NUCAPS-EDR_v3r0*
+    - NUCAPS-EDR_v3r*
     save:
     - UAF_IUTN*
